--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <p>test 2</p>
     <p>test 3</p>
     <p>test 4</p>
+    <p>test 5</p>
+
     <script src="" async defer></script>
   </body>
 </html>
