--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <p>test 4</p>
     <p>test 5</p>
     <p>test 6</p>
+    <p>test 7</p>
+    <p>test 7</p>
 
     <script src="" async defer></script>
   </body>
