--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <p>test 6</p>
     <p>test 7</p>
     <p>test 7</p>
+    <p>Activity2</p>
 
     <script src="" async defer></script>
   </body>
